[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI Pages/AccountCreationPage/InputAgePage/InputAgePage.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/DarkTheme/Dark.theme" type="Theme" id=2]
[ext_resource path="res://Assets/Buttons/ConfirmButtonPressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/Title.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/Brain Joos Logo.PNG" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/Space_Grotesk/static/SpaceGrotesk-Light.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Buttons/ConfirmButton.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 6 )

[node name="InputAgePage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.7776, 0.88704, 0.96, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1137.0
color = Color( 0.568627, 0.74902, 0.870588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrainJoosLogo" type="TextureRect" parent="."]
margin_top = 59.0
margin_right = 719.0
margin_bottom = 775.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrainJoosText" type="TextureRect" parent="BrainJoosLogo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = 116.178
margin_right = 272.0
margin_bottom = 442.178
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
visible = false
modulate = Color( 1, 0.0117647, 0.0117647, 1 )
margin_left = 280.525
margin_top = 990.943
margin_right = 426.525
margin_bottom = 1035.94
text = "Message"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = 189.0
margin_right = 272.0
margin_bottom = 553.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
margin_right = 544.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "Name"
placeholder_alpha = 1.0
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgeInput" type="LineEdit" parent="VBoxContainer"]
margin_top = 131.0
margin_right = 544.0
margin_bottom = 232.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "Age"
placeholder_alpha = 1.0
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmAgeButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 262.0
margin_right = 544.0
margin_bottom = 364.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 3 )
expand = true
stretch_mode = 5

[connection signal="pressed" from="VBoxContainer/ConfirmAgeButton" to="." method="_on_ConfirmAgeButton_pressed"]
